# mpl-core

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  package.json  pnpm-lock.yaml  rust-toolchain.toml
.github/: .env  dependabot.yml  file-filters.yml
.github/workflows/: benchmark-summary.yml  benchmark.yml  build-programs.yml  build-rust-client.yml  create-release.yml  deploy-program.yml  main.yml  publish-js-client.yml  publish-rust-client.yml  test-js-client.yml  test-js-kit-client.yml  test-programs.yml  test-rust-client.yml  verify-program.yml
.husky/: pre-commit
clients/js/: .env.example  .npmrc  CONTRIBUTING.md  README.md  baseline.json  output.json  package.json  pnpm-lock.yaml
clients/js-kit/: .eslintrc.js  package.json  pnpm-lock.yaml  tsconfig.json
clients/js-kit/src/: hash.ts  index.ts  utils.ts
clients/js-kit/test/: _setup.ts  _transaction.ts  addPlugin.test.ts  approveAuthority.test.ts  asset.test.ts  burn.test.ts  burnCollection.test.ts  collect.test.ts  collection.test.ts  collectionSize.test.ts  compress.test.ts  create.test.ts  createCollection.test.ts  decompress.test.ts  execute.test.ts  info.test.ts  removePlugin.test.ts  revokeAuthority.test.ts  transfer.test.ts  update.test.ts  updatePlugin.test.ts  updateV2.test.ts
clients/js/bench/: _setup.ts  create.ts  transfer.ts
clients/js/src/: asset.ts  authority.ts  das.ts  demo.ts  hash.ts  index.ts  plugin.ts  plugins.ts  tests.ts  types.ts  utils.ts
clients/js/test/: _setup.ts  _setupRaw.ts  _setupSdk.ts  (+51 more)
clients/rust/: CONTRIBUTING.md  Cargo.toml  README.md
clients/rust/src/: borsh_compat.rs  indexable_asset.rs  lib.rs
clients/rust/src/hooked/: advanced_types.rs  asset.rs  collection.rs  compression_proof.rs  mod.rs  plugin.rs  plugins.rs
clients/rust/src/plugins/: mod.rs
clients/rust/src/unified/: advanced_types.rs  asset.rs  collection.rs  mod.rs
clients/rust/tests/: add_external_plugins.rs  agent_identity.rs  child_groups.rs  close_group.rs  create.rs  create_collection.rs  create_collection_asset.rs  create_collection_with_external_plugins.rs  create_group_with_links.rs  create_with_external_plugins.rs  execute.rs  external_plugins.rs  freeze_execute.rs  group_assets.rs  group_collections.rs  group_plugins.rs  plugin_shrink_corruption.rs  plugins.rs  remove_external_plugins.rs  remove_external_plugins_on_collection.rs  transfer.rs  update_collection_info.rs  update_external_plugins.rs  update_external_plugins_on_collection.rs  update_group_metadata.rs
clients/rust/tests/setup/: group.rs  mod.rs
configs/: codama-tree.json  codama.cjs  kinobi.cjs  shank.cjs  validator.cjs
configs/scripts/program/squads-verified-upgrade/: Cargo.toml
dev/bench/: data.js  index.html
idls/: mpl_asset_program.json  mpl_core.json  mpl_core_program.json
programs/macros/: Cargo.toml
programs/mpl-asset/: Cargo.toml  README.md
programs/mpl-core/: Cargo.toml  README.md  expanded.rs
programs/mpl-core/idl/: mpl_core_program.json
programs/mpl-core/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  utils.rs
programs/mpl-core/src/plugins/: add_blocker.rs  advanced_lifecycle_hook.rs  allowlist.rs  app_data.rs  asset_linked_app_data.rs  asset_linked_lifecycle_hook.rs  asset_linked_secure_data_store.rs  attributes.rs  autograph.rs  burn.rs  burn_delegate.rs  collection.rs  data_section.rs  data_store.rs  edition.rs  external_plugin_adapters.rs  external_plugins.rs  freeze.rs  freeze_delegate.rs  group_plugins.rs  immutable.rs  immutable_metadata.rs  lifecycle.rs  lifecycle_hook.rs  linked_app_data.rs  linked_lifecycle_hook.rs  master_edition.rs  mod.rs  oracle.rs  permanent_burn.rs  permanent_burn_delegate.rs  permanent_freeze.rs  permanent_freeze_delegate.rs  permanent_transfer.rs  permanent_transfer_delegate.rs  plugin_adapters.rs  plugin_allowlist.rs  plugin_header.rs  plugin_registry.rs  royalties.rs  (+8 more)
programs/mpl-core/src/plugins/internal/: mod.rs
programs/mpl-core/src/plugins/internal/authority_managed/: add_blocker.rs  attributes.rs  groups.rs  immutable_metadata.rs  master_edition.rs  mod.rs  royalties.rs  transfer_count.rs  update_delegate.rs  verified_creators.rs
programs/mpl-core/src/plugins/internal/owner_managed/: autograph.rs  burn_delegate.rs  freeze_delegate.rs  freeze_execute.rs  mod.rs  transfer_delegate.rs
programs/mpl-core/src/plugins/internal/permanent/: bubblegum_v1.rs  bubblegum_v2.rs  edition.rs  mod.rs  permanent_burn_delegate.rs  permanent_freeze_delegate.rs  permanent_freeze_execute.rs  permanent_transfer_delegate.rs
programs/mpl-core/src/processor/: add_assets_to_group.rs  add_authority.rs  add_collections_to_group.rs  add_external_plugin.rs  add_external_plugin_adapter.rs  add_group_external_plugin_adapter.rs  add_group_plugin.rs  add_groups_to_group.rs  add_plugin.rs  add_plugin_adapter.rs  add_plugin_authority.rs  allocate_external_plugin_data.rs  approve_group_plugin_authority.rs  approve_plugin_authority.rs  batch.rs  burn.rs  clear_external_plugin_data.rs  close_group.rs  collect.rs  compress.rs  create.rs  create_collection.rs  create_group.rs  decompress.rs  execute.rs  group_collection_plugin.rs  groups_plugin_utils.rs  mod.rs  remove_assets_from_group.rs  remove_authority.rs  remove_collections_from_group.rs  remove_external_plugin.rs  remove_external_plugin_adapter.rs  remove_group_external_plugin_adapter.rs  remove_group_plugin.rs  remove_groups_from_group.rs  remove_plugin.rs  remove_plugin_adapter.rs  remove_plugin_authority.rs  revoke_group_plugin_authority.rs  (+14 more)
programs/mpl-core/src/processor/group/: assets.rs  child_groups.rs  close.rs  collections.rs  create.rs  metadata.rs  mod.rs
programs/mpl-core/src/state/: asset.rs  asset_group_plugin.rs  collect.rs  collection.rs  collection_group_plugin.rs  compression_proof.rs  group.rs  hashable_plugin_schema.rs  hashed_asset.rs  hashed_asset_schema.rs  mod.rs  traits.rs  update_authority.rs
programs/mpl-core/src/utils/: account.rs  compression.rs  group.rs  mod.rs  plugin_system.rs
programs/mpl-core/tests/: account_ownership.rs  agent_identity.rs  execution_delegate.rs
(+358 files in other folders)
