[package]
description = "A flexible digital asset standard for Solana"
edition = "2021"
license-file = "../../LICENSE"
name = "mpl-core"
readme = "README.md"
repository = "https://github.com/metaplex-foundation/mpl-core"
version = "0.10.1-alpha.2"

[lib]
crate-type = ["cdylib", "lib"]

[features]
anchor = ["dep:anchor-lang", "kaigan/anchor"]
serde = ["dep:serde", "dep:serde_with"]
test-sbf = []

[dependencies]
anchor-lang = { version = "0.31.1", optional = true }
base64 = "0.22.0"
borsh = "^0.10"
modular-bitfield = "0.11.2"
num-derive = "^0.3"
num-traits = "^0.2"
rmp-serde = "1.0"
serde = { version = "^1.0", features = ["derive"], optional = true }
serde_json = "1.0"
serde_with = { version = "^3.0", optional = true }
solana-program = "2.2.1"
thiserror = "^1.0"

kaigan = { version = "0.3.0",features = ["serde"], optional = false }


[dev-dependencies]
assert_matches = "1.5.0"
solana-program-test = "2.2.1"
solana-sdk = "2.2.1"

