[package]
description = "A flexible digital asset standard for Solana"
edition = "2021"
license-file = "../../LICENSE"
name = "mpl-core"
readme = "README.md"
repository = "https://github.com/metaplex-foundation/mpl-core"
version = "0.12.0"

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = ["borsh-v1"]
# Anchor is mutually exclusive with the default `borsh-v1` feature.
# Consumers should set `default-features = false` when enabling `anchor`.
anchor = [
    "dep:anchor-lang-0-31",
    "dep:borsh",
    "dep:solana-program-2",
    "kaigan/anchor",
]
anchor-0-32 = ["anchor", "dep:anchor-lang-0-32"]
serde = ["dep:serde", "dep:serde_with"]
test-sbf = []
borsh-v1 = ["kaigan/borsh-v1"]

[dependencies]
anchor-lang-0-31 = { package = "anchor-lang", version = "0.31.1", optional = true }
anchor-lang-0-32 = { package = "anchor-lang", version = "0.32.1", optional = true }
base64 = "0.22.0"
borsh = { version = "0.10.4", optional = true }
borsh1 = { package = "borsh", version = "1.5", features = ["derive"] }
modular-bitfield = "0.11.2"
num-derive = "^0.4"
num-traits = "^0.2"
rmp-serde = "1.0"
serde = { version = "^1.0", features = ["derive"], optional = true }
serde_json = "1.0"
serde_with = { version = "^3.0", optional = true }
solana-program = "3.0.0"
solana-program-2 = { package = "solana-program", version = "2.3.0", optional = true }
solana-program-error = "3.0.0"
thiserror = "^1.0"

kaigan = { version = "0.5.0", features = ["serde"], optional = false }


[dev-dependencies]
assert_matches = "1.5.0"
solana-program-test = "3.0.0"
solana-sdk = "3.0.0"
solana-system-interface = { version = "2.0.0", features = ["bincode"] }
