[package]
name = "mpl-core-program"
version = "0.2.0"
edition = "2021"
readme = "./README.md"
license-file = "../../LICENSE"
publish = false

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
borsh = { version = "1.5.7", features = ["derive"] }
shank = "0.4.2"
modular-bitfield = "0.11.2"
mpl-bubblegum = "2.1.1"
num-derive = "^0.3"
num-traits = "^0.2"
solana-program = "3.0.0"
solana-system-interface = "2.0.0"
thiserror = "^1.0"
bytemuck = "1.14.1"
mpl-utils = "0.5.0"
spl-noop = { version = "1.0.0", features = ["cpi"] }
podded = "0.7.0"
strum = { version = "0.26.1", features = ["derive"] }
mpl-agent-identity = { path = "/Users/stranzhay/Programming/metaplex-work/mpl-agent/clients/rust-identity" }
mpl-agent-tools = { path = "/Users/stranzhay/Programming/metaplex-work/mpl-agent/clients/rust-tools" }

[dev-dependencies]
mollusk-svm = "0.12.0"
solana-sdk = "3.0.0"
