[package]
name = "mpl-core-program"
version = "0.2.0"
edition = "2021"
readme = "./README.md"
license-file = "../../LICENSE"
publish = false

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
borsh = { version = "1.5", features = ["derive"] }
shank = "0.4.2"
modular-bitfield = "0.11.2"
mpl-bubblegum = "3.0.0"
num-derive = "^0.3"
num-traits = "^0.2"
solana-program = "3.0.0"
solana-system-interface = { version = "2.0.0", features = ["bincode"] }
thiserror = "^1.0"
bytemuck = "1.14.1"
mpl-utils = { version = "0.5.0", default-features = false }
mpl-noop = { version = "2.0.0", features = ["cpi"] }
podded = "0.5.1"
strum = { version = "0.26.1", features = ["derive"] }
mpl-agent-identity = "0.3.0"
mpl-agent-tools = "0.3.0"

[dev-dependencies]
mollusk-svm = "0.5.0"
solana-sdk = "3.0.0"
